removed spaces