@@ -1,7 +1,6 @@
 package com.fst.bazaar.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -14,14 +13,13 @@ import org.springframework.stereotype.Service;
 import com.fst.bazaar.entity.User;
 import com.fst.bazaar.repo.UserRepo;
 
+import lombok.AllArgsConstructor;
+
 @Service
 @Transactional
+@AllArgsConstructor
 public class UserDetailsImplementation implements UserDetailsService {
 	private final UserRepo userRepo;
-
-	public UserDetailsImplementation(UserRepo userRepo) {
-		this.userRepo = userRepo;
-	}
 
 	@Override
 	public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
@@ -34,7 +32,7 @@ public class UserDetailsImplementation implements UserDetailsService {
 		List<SimpleGrantedAuthority> authorities = user.getRoles()
 				.stream()
 				.map(role -> new SimpleGrantedAuthority(role.getName()))
-				.collect(Collectors.toList());
+				.toList();
 
 		return new org.springframework.security.core.userdetails.User(
 				user.getEmail(), user.getPassword(), authorities);
